test/documents/simple.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple
spec:
  selector:
    matchLabels:
      app: simple
  replicas: 1
  template:
    metadata:
      labels:
        app: simple
    spec:
      containers:
        - name: api
          image: kubesail/qotm
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
            limits:
              cpu: "2"
              memory: 1500Mi
